// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab Pane 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/card-top.md correctly 1`] = `
<div
  class="card-container"
>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          />
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab Title 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab Title 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab Title 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
        <p>
          Content of Tab Pane 1
        </p>
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/custom-add-trigger.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        ADD
      </span>
    </button>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          />
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 1
                  <svg
                    class="anticon"
                    data-icon="close"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                <div>
                  Tab 2
                  <svg
                    class="anticon"
                    data-icon="close"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-no-animated"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab Pane 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/disabled.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="true"
              aria-selected="false"
              class=" ant-tabs-tab ant-tabs-tab-disabled"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/editable-card.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-card ant-tabs-editable-card ant-tabs-no-animation"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <span>
        <svg
          class="anticon ant-tabs-new-tab"
          data-icon="plus"
          fill="currentColor"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              <div>
                Tab 1
                <svg
                  class="anticon"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              <div>
                Tab 2
                <svg
                  class="anticon"
                  data-icon="close"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9c-4.4 5.2-.7 13.1 6.1 13.1h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                  />
                </svg>
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              <div
                class="ant-tabs-tab-unclosable"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-no-animated"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of Tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/extra.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-extra-content"
      style="float:right"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Extra Action
        </span>
      </button>
    </div>
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              Tab 1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:0%"
  >
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Content of tab 1
    </div>
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/icon.md correctly 1`] = `
<div
  class="ant-tabs ant-tabs-top ant-tabs-line"
>
  <div
    class="ant-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="ant-tabs-nav-container"
    >
      <span
        class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="ant-tabs-tab-next-icon"
        />
      </span>
      <div
        class="ant-tabs-nav-wrap"
      >
        <div
          class="ant-tabs-nav-scroll"
        >
          <div
            class="ant-tabs-nav ant-tabs-nav-animated"
          >
            <div
              class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
            />
            <div
              aria-disabled="false"
              aria-selected="false"
              class=" ant-tabs-tab"
              role="tab"
            >
              <span>
                <svg
                  class="anticon"
                  data-icon="apple"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M722.5 676.1c-19.3-28.3-31.5-58.4-37.9-89-4.3-20.2-5.5-37.1-5.1-51.8-.1-61.9 19.4-115 56.9-158.4-16.5-7.5-35.9-12.1-58.6-13.8-4-.3-8.4-.3-13.2.1-16.3 1.2-35.1 6.1-60.8 15.2-4.6 1.6-30.4 11.2-37.5 13.6-18.9 6.5-32.1 9.8-47.7 9.8-15.3 0-29.5-3.1-47.6-9-5.7-1.8-11.5-3.8-19.2-6.6-1.6-.6-14.7-5.3-18.5-6.7-12.7-4.5-22.1-7.6-30.7-9.9-10.9-3-19.4-4.4-25.4-4.5-36 .7-71.5 15.7-97.8 42.3-30.6 31.1-48.4 76.9-48.4 137.1 0 40.9 7.6 83.7 23 128.6 12.5 35.9 38.5 87.1 66 125.7 15.6 21.9 31.1 39 45.1 49.9 6.1 4.8 11.5 8 16 9.8 1.6.7 3 1.1 4.1 1.3.5.1 1.1.1 1.8.2 5.9-.1 12.4-1.6 22.9-5.2 2.5-.9 5.3-1.9 8.7-3.2 2.1-.8 9.5-3.6 10.2-3.9 17.1-6.5 28.7-10.4 42.7-13.8 19-4.7 38-7.2 58.1-7.2 19.7 0 38.3 2.6 56.9 7.4 13.3 3.5 23.7 7.1 41.1 13.8.6.2 3.6 1.4 4.4 1.7 1.6.6 2.9 1.1 4.2 1.6 17.1 6.5 25.7 8.7 34.7 8.8 5.4-.2 13.5-3.6 24-11.6 13.3-10.1 27.6-25.7 41.9-45.7 14.8-20.6 28.9-45 40.3-68.7-21.7-17-39.9-36.4-54.6-57.9z"
                    fill="none"
                  />
                  <path
                    d="M747.4 535.7c-.4-68.2 30.5-119.6 92.9-157.5-34.9-50-87.7-77.5-157.3-82.8-65.9-5.2-138 38.4-164.4 38.4-27.9 0-91.7-36.6-141.9-36.6C273.1 298.8 163 379.8 163 544.6c0 48.7 8.9 99 26.7 150.8 23.8 68.2 109.6 235.3 199.1 232.6 46.8-1.1 79.9-33.2 140.8-33.2 59.1 0 89.7 33.2 141.9 33.2 90.3-1.3 167.9-153.2 190.5-221.6-121.1-57.1-114.6-167.2-114.6-170.7zm-10.6 267c-14.3 19.9-28.7 35.6-41.9 45.7-10.5 8-18.6 11.4-24 11.6-9-.1-17.7-2.3-34.7-8.8-1.2-.5-2.5-1-4.2-1.6-.8-.3-3.9-1.5-4.4-1.7-17.4-6.7-27.8-10.3-41.1-13.8-18.6-4.8-37.1-7.4-56.9-7.4-20.2 0-39.2 2.5-58.1 7.2-13.9 3.5-25.6 7.4-42.7 13.8-.7.3-8.1 3.1-10.2 3.9-3.5 1.3-6.2 2.3-8.7 3.2-10.4 3.6-17 5.1-22.9 5.2-.7 0-1.3-.1-1.8-.2-1.1-.2-2.5-.6-4.1-1.3-4.5-1.8-9.9-5.1-16-9.8-14-10.9-29.4-28-45.1-49.9-27.5-38.6-53.5-89.8-66-125.7-15.4-44.8-23-87.7-23-128.6 0-60.2 17.8-106 48.4-137.1 26.3-26.6 61.7-41.5 97.8-42.3 5.9.1 14.5 1.5 25.4 4.5 8.6 2.3 18 5.4 30.7 9.9 3.8 1.4 16.9 6.1 18.5 6.7 7.7 2.8 13.5 4.8 19.2 6.6 18.2 5.8 32.3 9 47.6 9 15.5 0 28.8-3.3 47.7-9.8 7.1-2.4 32.9-12 37.5-13.6 25.6-9.1 44.5-14 60.8-15.2 4.8-.4 9.1-.4 13.2-.1 22.7 1.8 42.1 6.3 58.6 13.8-37.6 43.4-57 96.5-56.9 158.4-.3 14.7.9 31.7 5.1 51.8 6.4 30.5 18.6 60.7 37.9 89 14.7 21.5 32.9 40.9 54.7 57.8-11.5 23.7-25.6 48.2-40.4 68.8z"
                  />
                  <path
                    d="M642.3 230.7c50.7-60.2 46.1-115 44.6-134.7-44.8 2.6-96.6 30.5-126.1 64.8-32.5 36.8-51.6 82.3-47.5 133.6 48.4 3.7 92.6-21.2 129-63.7z"
                  />
                </svg>
                Tab 1
              </span>
            </div>
            <div
              aria-disabled="false"
              aria-selected="true"
              class="ant-tabs-tab-active ant-tabs-tab"
              role="tab"
            >
              <span>
                <svg
                  class="anticon"
                  data-icon="android"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    class="st0"
                    d="M395.2 885.5c0 6.8 3.9 10.6 10.7 10.6 6.1 0 9.9-3.1 10.5-8.7v-60.1h-21.2v58.2zM647.1 213c-37.5-27.4-85.3-42.5-135-42.5s-97.5 15-135 42.3c-32.1 23.7-54.1 54.3-62.6 87.6h395.4c-8.6-33.2-30.4-63.7-62.8-87.4zm-198.8 76.1c-18.6 0-32-13.4-32-31.9s13.5-31.9 32-31.9c18.7 0 32.1 13.4 32 31.9 0 18.5-13.5 31.9-32 31.9zm127.8 0c-18.6 0-32-13.4-32-31.9s13.5-31.9 32-31.9c18.7 0 32 13.2 32 31.9 0 18.5-13.4 31.9-32 31.9zM235.3 363.8c-6.8 0-10.7 3.8-10.7 10.6v235.2c0 6.8 3.9 10.6 10.7 10.6 6.8 0 10.7-3.8 10.7-10.6V374.5c0-6.8-3.9-10.7-10.7-10.7zM629.3 827.3h-21.2v58.2c0 6.8 3.9 10.6 10.7 10.6 6.1 0 9.9-3.1 10.5-8.7v-60.1zM789 363.8c-6.8 0-10.7 3.8-10.7 10.6v235.2c0 6.8 3.9 10.6 10.7 10.6 6.8 0 10.7-3.8 10.7-10.6V374.5c0-6.8-3.9-10.7-10.7-10.7zM309.9 364h404.6v399.6H309.9z"
                  />
                  <path
                    d="M448.3 225.2c-18.6 0-32 13.4-32 31.9s13.5 31.9 32 31.9c18.6 0 32-13.4 32-31.9.1-18.4-13.4-31.9-32-31.9z"
                  />
                  <path
                    d="M842.2 321.6c-13.8-13.8-32.7-21.5-53.2-21.5-3.9 0-7.4.4-10.7 1v-1h-3.6c-5.5-30.6-18.6-60.5-38.1-87.4-18.7-25.7-43-47.9-70.8-64.9l25.1-35.8v-3.3c0-.8.4-2.3.7-3.8.6-2.4 1.4-5.5 1.4-8.9 0-18.5-13.5-31.9-32-31.9-9.8 0-19.5 5.7-25.9 15.4l-29.3 42.1c-30-9.8-62.4-15-93.8-15-31.3 0-63.7 5.2-93.8 15L389 79.4c-6.6-9.6-16.1-15.4-26-15.4-18.6 0-32 13.4-32 31.9 0 6.2 2.5 12.8 6.7 17.4l22.6 32.3c-28.7 17-53.5 39.4-72.2 65.1-19.4 26.9-32 56.8-36.7 87.4h-5.5v1c-3.2-.6-6.7-1-10.7-1-20.3 0-39.2 7.5-53.1 21.3-13.8 13.8-21.5 32.6-21.5 53v235c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 3.9 0 7.4-.4 10.7-1v93.5c0 29.2 23.9 53.1 53.2 53.1H331v58.3c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 20.3 0 39.2-7.5 53.1-21.3 13.8-13.8 21.5-32.6 21.5-53v-58.2H544v58.1c0 20.3 7.5 39.1 21.4 52.9 13.8 13.8 32.8 21.5 53.2 21.5 20.4 0 39.2-7.5 53.1-21.6 13.8-13.8 21.5-32.6 21.5-53v-58.2h31.9c29.3 0 53.2-23.8 53.2-53.1v-91.4c3.2.6 6.7 1 10.7 1 20.3 0 39.2-7.5 53.1-21.3 13.8-13.8 21.5-32.6 21.5-53v-235c-.1-20.3-7.6-39-21.4-52.9zM246 609.6c0 6.8-3.9 10.6-10.7 10.6-6.8 0-10.7-3.8-10.7-10.6V374.5c0-6.8 3.9-10.6 10.7-10.6 6.8 0 10.7 3.8 10.7 10.6v235.1zm131.1-396.8c37.5-27.3 85.3-42.3 135-42.3s97.5 15.1 135 42.5c32.4 23.7 54.2 54.2 62.7 87.5H314.4c8.5-33.4 30.5-64 62.7-87.7zm39.3 674.7c-.6 5.6-4.4 8.7-10.5 8.7-6.8 0-10.7-3.8-10.7-10.6v-58.2h21.2v60.1zm202.3 8.7c-6.8 0-10.7-3.8-10.7-10.6v-58.2h21.2v60.1c-.6 5.6-4.3 8.7-10.5 8.7zm95.8-132.6H309.9V364h404.6v399.6zm85.2-154c0 6.8-3.9 10.6-10.7 10.6-6.8 0-10.7-3.8-10.7-10.6V374.5c0-6.8 3.9-10.6 10.7-10.6 6.8 0 10.7 3.8 10.7 10.6v235.1z"
                  />
                  <path
                    d="M576.1 225.2c-18.6 0-32 13.4-32 31.9s13.5 31.9 32 31.9c18.6 0 32.1-13.4 32.1-32-.1-18.6-13.4-31.8-32.1-31.8z"
                  />
                </svg>
                Tab 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs-content ant-tabs-content-animated"
    style="margin-left:-100%"
  >
    <div
      aria-hidden="true"
      class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="false"
      class="ant-tabs-tabpane ant-tabs-tabpane-active"
      role="tabpanel"
    >
      Tab 2
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/position.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:16px"
  >
    Tab position：
    <div
      class="ant-select ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="display:block;opacity:1"
            title="top"
          >
            top
          </div>
        </div>
        <span
          class="ant-select-arrow"
          style="user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          <b />
        </span>
      </div>
    </div>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          />
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of Tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/size.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:16px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-small ant-tabs-line"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          />
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/slide.md correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="top"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Horizontal
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="left"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Vertical
      </span>
    </label>
  </div>
  <div
    class="ant-tabs ant-tabs-top ant-tabs-line"
    style="height:220px"
  >
    <div
      class="ant-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="ant-tabs-nav-container"
      >
        <span
          class="ant-tabs-tab-prev ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-prev-icon"
          />
        </span>
        <span
          class="ant-tabs-tab-next ant-tabs-tab-btn-disabled"
          unselectable="unselectable"
        >
          <span
            class="ant-tabs-tab-next-icon"
          />
        </span>
        <div
          class="ant-tabs-nav-wrap"
        >
          <div
            class="ant-tabs-nav-scroll"
          >
            <div
              class="ant-tabs-nav ant-tabs-nav-animated"
            >
              <div
                class="ant-tabs-ink-bar ant-tabs-ink-bar-animated"
              />
              <div
                aria-disabled="false"
                aria-selected="true"
                class="ant-tabs-tab-active ant-tabs-tab"
                role="tab"
              >
                Tab 1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 3
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 4
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 5
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 6
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 7
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 8
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 9
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 10
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" ant-tabs-tab"
                role="tab"
              >
                Tab 11
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-tabs-content ant-tabs-content-animated"
      style="margin-left:0%"
    >
      <div
        aria-hidden="false"
        class="ant-tabs-tabpane ant-tabs-tabpane-active"
        role="tabpanel"
      >
        Content of tab 1
      </div>
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="ant-tabs-tabpane ant-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
